--- a/basicResource.yaml
+++ b/basicResource.yaml
@@ -7,7 +7,7 @@ resourcePolicy:
   # This resource file is reviewed for when checking permissions when a resource
   # is of `kind` "basicResource"
   resource: basicResource
-  scope: my-scope
+  scope: myscope
 
   rules:
     # If the `principal`s role is `admin` then all the actions are allowed.
