--- a/anotherResource.yaml
+++ b/anotherResource.yaml
@@ -6,7 +6,7 @@ resourcePolicy:
 
   # This resource file is reviewed for when checking permissions when a resource
   # is of `kind` "basicResource"
-  resource: anotherResource
+  resource: basicResource
 
   rules:
     # If the `principal`s role is `admin` then all the actions are allowed.
