--- a/basicResource.yaml
+++ b/basicResource.yaml
@@ -2,7 +2,7 @@
 
 apiVersion: api.cerbos.dev/v1
 resourcePolicy:
-  version: myver
+  version: default
 
   # This resource file is reviewed for when checking permissions when a resource
   # is of `kind` "basicResource"
